# ImageViewer

./: CMakeLists.txt
include/: hotkey.h  image.h  lzip.h  main.h
src/: image.cpp  lzip.cpp  main.cpp
src/ImageReader/: chapter.cpp  fm.cpp  series.cpp
src/ImageViewer/: page.cpp  view.cpp  window.cpp
